k8s/overlays/dev/fix-ui-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-hub
  namespace: invisible
spec:
  template:
    spec:
      containers:
      - name: ui-hub
