k8s/overlays/dev/ui-hub-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-hub
  namespace: invisible
spec:
  template:
    spec:
      volumes:
      - name: config
        configMap:
          name: ui-hub-config
      containers:
      - name: ui-hub
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/config.js
          subPath: config.js
